Add basic styling to the webpage

--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mike's Etch-A-Sketch</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Mike's Etch-A-Sketch</h1>
+    <h1 class="title">Mike's Etch-A-Sketch</h1>
     <div class="middle-container">
         <div class="left-container">
             <div class="upper-container">
@@ -22,7 +23,7 @@
         <div class="etch-a-sketch"></div>
     </div>
     <div class="slidecontainer">
-        <input type="range" min="2" max="100" value="50" class="slider" id="myRange">
+        <input type="range" min="2" max="100" value="51" class="slider" id="myRange">
     </div>
 </body>
 </html>
