Add toggle ON/OFF options for eraser and rainbow

--- a/index.html
+++ b/index.html
@@ -23,8 +23,14 @@
                     </button>
                 </div>
                 <div class="lower-container">
-                    <button class="eraser">Toggle Eraser</button>
-                    <button class="rainbow">Toggle Rainbow</button>
+                    <button class="eraser">
+                        Toggle Eraser
+                        <div class="toggle-state"></div>
+                    </button>
+                    <button class="rainbow">
+                        Toggle Rainbow
+                        <div class="toggle-state"></div>
+                    </button>
                 </div>
             </div>
             <div class="etch-a-sketch"></div>
