--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                         Toggle Rainbow
                         <div class="toggle-state"></div>
                     </button>
+                    <button class="reset">Reset</button>
                 </div>
             </div>
             <div class="etch-a-sketch"></div>
