Add a header and style it

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-    <h1 class="title">Mike's Etch-A-Sketch</h1>
+    <div class="header">Mike's Etch-A-Sketch</div>
     <div class="main-content">
         <div class="middle-container">
             <div class="left-container">
